# mscript

./: CMakeLists.txt
examples/: functions.ms  variables.ms
include/mscript/backend/: Environment.hpp  Interpreter.hpp  NativeFunctions.hpp  Value.hpp
include/mscript/core/: AST.hpp  Word.hpp
include/mscript/frontend/: Lexer.hpp  Parser.hpp  Printer.hpp  Token.hpp
src/: main.cpp
src/mscript/backend/: Environment.cpp  Interpreter.cpp  NativeFunctions.cpp  Value.cpp
src/mscript/core/: Word.cpp
src/mscript/frontend/: Lexer.cpp  Parser.cpp  Printer.cpp  Token.cpp
tests/: test_lexer.cpp
